# IogramSource

./: .gitignore  .gitmodules  CMakeLists.txt  FullBuild_GCC.sh  FullBuild_Win64.bat  LICENSE  README.md  cap_laptop.bat  cmake_eclipse_mesh_linux.sh  cmake_eclipse_tmp.sh  cmake_eclipse_tmp_retina.sh  cmake_gcc.sh  cmake_gcc_elissa.sh  cmake_generic.sh.txt  cmake_vs2015.bat  cmake_vs2015.bat.txt  cmake_vs2015_ogl.bat  cmake_vs2015_ogl_cap.bat  cmake_vs2015_ogl_elissa.bat  cmake_xcode_elissa.sh  cmake_xcode_elissa_home.sh  dan_em_player.bat  dan_home.bat  dan_player_only.bat  dan_work.bat  em_player.bat
CMake/Modules/: Urho3D-CMake-common.cmake
Components/: CMakeLists.txt  ColorDefs.h  ColorSlider.cpp  ColorSlider.h  ColorWheel.cpp  ColorWheel.h  ComponentRegistration.cpp  ComponentRegistration.h  CurveRenderer.cpp  CurveRenderer.h  Curve_Close.cpp  Curve_Close.h  Curve_HelixSpiral.cpp  Curve_HelixSpiral.h  Curve_Length.cpp  Curve_Length.h  Curve_LineSegment.cpp  Curve_LineSegment.h  Curve_MakeKnot.cpp  Curve_MakeKnot.h  Curve_MeshSketch.cpp  Curve_MeshSketch.h  Curve_OffsetPolyline.cpp  Curve_OffsetPolyline.h  Curve_Pipe.cpp  Curve_Pipe.h  Curve_Polygon.cpp  Curve_Polygon.h  Curve_Polyline.cpp  Curve_Polyline.h  Curve_PolylineBlend.cpp  Curve_PolylineBlend.h  Curve_PolylineDivide.cpp  Curve_PolylineDivide.h  Curve_PolylineEvaluate.cpp  Curve_PolylineEvaluate.h  Curve_PolylineLoft.cpp  Curve_PolylineLoft.h  Curve_PolylineRefine.cpp  Curve_PolylineRefine.h  (+574 more)
Core/: AppIncludes.h  CMakeLists.txt  ComponentRegistration.h  IndexUtilities.cpp  IndexUtilities.h  IoComponentBase.cpp  IoComponentBase.h  IoComponentGroup.h  IoDataTree.cpp  IoDataTree.h  IoGraph.cpp  IoGraph.h  IoInputSlot.cpp  IoInputSlot.h  IoOutputSlot.cpp  IoOutputSlot.h  IoScriptInstance.cpp  IoScriptInstance.h  IoSerialization.cpp  IoSerialization.h  NetworkUtilities.cpp  NetworkUtilities.h  PersistentData.cpp  PersistentData.h  PluginAPI.cpp  PluginAPI.h  Win.h
CoreData/Materials/: BasicCurve.xml  BasicDiffuse.xml  BasicPBR.xml  BasicPBRAlpha.xml  BasicPBR_backface.xml  BasicPoints.xml  BasicTransparent.xml  DefaultEnv.xml  FlatFace.xml  MetallicRough3.xml
CoreData/Models/: AxisWidget.mdl
CoreData/PostProcess/: Bloom.xml  RemapToGradient.xml  Toon.xml  Vibrance.xml
CoreData/RenderPaths/: ForwardDepthSAO.xml
CoreData/Shaders/GLSL/: Clouds.glsl  FlatFace.glsl  FlatNormals.glsl  LitSolid.glsl  RemapToGradient.glsl
CoreData/Techniques/: FlatFace.xml  PBRNoTextureAlpha.xml
CoreData/Textures/: SkyGradient.xml  ZoneCubeMap.xml
CoreData/UI/: CustomUIExample.xml  IogramDefaultStyle.xml
Geometry/: CMakeLists.txt  ConversionUtilities.cpp  ConversionUtilities.h  DxfReader.cpp  DxfReader.h  DxfWriter.cpp  DxfWriter.h  Geomlib_BestFitPlane.cpp  Geomlib_BestFitPlane.h  Geomlib_ClosestPoint.cpp  Geomlib_ClosestPoint.h  Geomlib_ConstructTransform.cpp  Geomlib_ConstructTransform.h  Geomlib_GeoConversions.cpp  Geomlib_GeoConversions.h  Geomlib_HausdorffDistance.cpp  Geomlib_HausdorffDistance.h  Geomlib_Incenter.cpp  Geomlib_Incenter.h  Geomlib_JoinMeshes.cpp  Geomlib_JoinMeshes.h  Geomlib_MeshTetrahedralize.cpp  Geomlib_MeshTetrahedralize.h  Geomlib_PolylineBlend.cpp  Geomlib_PolylineBlend.h  Geomlib_PolylineDivide.cpp  Geomlib_PolylineDivide.h  Geomlib_PolylineExtrude.cpp  Geomlib_PolylineExtrude.h  Geomlib_PolylineIntersection.cpp  Geomlib_PolylineIntersection.h  Geomlib_PolylineLoft.cpp  Geomlib_PolylineLoft.h  Geomlib_PolylineOffset.cpp  Geomlib_PolylineOffset.h  Geomlib_PolylinePointFromParameter.cpp  Geomlib_PolylinePointFromParameter.h  Geomlib_PolylinePointToTransform.cpp  Geomlib_PolylinePointToTransform.h  Geomlib_PolylineRefine.cpp  (+87 more)
Player/: CMakeLists.txt  IogramPlayer.cpp  IogramPlayer.h
